# llvm_checkedc

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp
base/: CMakeLists.txt
base/include/base/: exceptions.h  factory.h  iterable_stack.h  singleton.h
include/: config.h
libs/: CMakeLists.txt
logger/: CMakeLists.txt  logger.cpp
logger/include/logger/: logger.h
parser/: CMakeLists.txt  binary_expression.cpp  parser.cpp  scope.cpp  variable.cpp
parser/include/parser/: expression.h  parser.h  scope.h  statement.h  variable.h  visitor.h
parser/include/parser/expression/: binary_expression.h
parser/utils/: config.json  visitor_gen.py
resolver/: CMakeLists.txt  array_type.cpp  floating_type.cpp  integral_type.cpp  pointer_type.cpp  type.cpp
resolver/include/resolver/: array_type.h  floating_type.h  integral_type.h  pointer_type.h  type.h  type_kind.h
scanner/: CMakeLists.txt  scanner.cpp
scanner/include/scanner/: scanner.h  source_information.h  token.h  token_type.h
test/test_src/: helloworld.c
